Intro notebook update

--- a/01_HEPandBigData.ipynb
+++ b/01_HEPandBigData.ipynb
@@ -23,7 +23,7 @@
     "---\n",
     "\n",
     "<table>\n",
-    "<tr>\n",
+    "<tr style=\"background: white;\">\n",
     "    <td>\n",
     "    <b>\n",
     "    The School is organized in the framework and with the support of the European Science Cluster of Astronomy\n",
@@ -32,7 +32,7 @@
     "    </b>\n",
     "    </td>\n",
     "</tr>\n",
-    "<tr>\n",
+    "<tr style=\"background: white;\">\n",
     "    <td align=\"center\"><img src=\"images/logo_Escape.png\" width=\"15%\"><img src=\"images/logo_flag-of-europe.webp\" width=\"15%\"></td>\n",
     "</tr>\n",
     "</table>\n",
@@ -427,7 +427,7 @@
     "These are major events for the WG. Check out the forthcoming [PyHEP 2021 workshop](https://indico.cern.ch/e/PyHEP2021) ...\n",
     "\n",
     "<table align=\"left\" border=\"0\">\n",
-    "    <tr>\n",
+    "    <tr style=\"background: white;\">\n",
     "        <td style=\"width:100px\">&nbsp;</td>\n",
     "        <td align=\"center\"><img src=\"images/logo_PyHEP.png\" width=\"100px\"/></td>\n",
     "        <td style=\"width:40px\">&nbsp;</td>\n",
@@ -449,7 +449,7 @@
     "A series of Python projects have seen the light in recent years, where by *projects* I select endeavours that provide one or more Python libraries *with a community around it*. ROOT and SWAN (both are CERN projects) presently share the arena with a few community projects that build around the general Python scientific ecosystem instead of on ROOT:\n",
     "\n",
     "<table align=\"left\" border=\"0\">\n",
-    "    <tr>\n",
+    "    <tr style=\"background: white;\">\n",
     "        <td style=\"width:150px\">&nbsp;</td>\n",
     "        <td>\n",
     "            <h4><a href=\"https://github.com/CoffeaTeam\">Coffea</a></h4>\n",
