Scikit-HEP intro notebook update

--- a/02_Scikit-HEP_introduction.ipynb
+++ b/02_Scikit-HEP_introduction.ipynb
@@ -128,13 +128,13 @@
    "source": [
     "A \"whetting your appetite\" mini gallery ...:\n",
     "<table>\n",
-    "<tr>\n",
+    "<tr style=\"background: white;\">\n",
     "    <td align=\"center\"><img src=\"images/Scikit-HEP_gallery_uproot.jpg\" width=\"80%\"></td>\n",
     "    <td align=\"center\"><img src=\"images/Scikit-HEP_gallery_Hist.jpg\" width=\"80%\"></td>\n",
     "</tr>\n",
     "</table>\n",
     "<table>\n",
-    "<tr>\n",
+    "<tr style=\"background: white;\">\n",
     "    <td align=\"center\"><img src=\"images/Scikit-HEP_gallery_Particle.jpg\" width=\"50%\"></td>\n",
     "    <td align=\"center\"><img src=\"images/Scikit-HEP_gallery_DecayLanguage.png\" width=\"80%\"></td>\n",
     "</tr>\n",
@@ -158,51 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "System:\n",
-      "    python: 3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]\n",
-      "executable: C:\\Users\\eduar\\anaconda3\\python.exe\n",
-      "   machine: Windows-10-10.0.19042-SP0\n",
-      "\n",
-      "Python dependencies:\n",
-      "       pip: 21.1.1\n",
-      "setuptools: 52.0.0.post20210125\n",
-      "     numpy: 1.19.5\n",
-      "     scipy: 1.6.2\n",
-      "    pandas: 1.2.4\n",
-      "matplotlib: 3.4.2\n",
-      "\n",
-      "Scikit-HEP package version and dependencies:\n",
-      "       awkward0: 0.15.5\n",
-      "        awkward: 1.2.3\n",
-      "boost_histogram: 1.0.1\n",
-      "  decaylanguage: 0.11.0\n",
-      "       hepstats: 0.4.0\n",
-      "       hepunits: 2.1.0\n",
-      "           hist: 2.3.0\n",
-      "     histoprint: 2.1.0\n",
-      "        iminuit: 2.6.1\n",
-      "         mplhep: 0.3.7\n",
-      "       particle: 0.15.0\n",
-      "          skhep: 3.2.0\n",
-      "         uproot: 4.0.6\n",
-      "        uproot3: 3.14.4\n",
-      "uproot3_methods: 0.10.1\n",
-      "         vector: 0.8.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import skhep\n",
     "skhep.show_versions()"
