Final versions of intro notebooks

--- a/01_HEPandBigData.ipynb
+++ b/01_HEPandBigData.ipynb
@@ -494,7 +494,9 @@
     "\n",
     "<h4><b>On these PyHEP community projects and libraries</b></h4>\n",
     "\n",
-    "The ecosystem that is going to be showcased in these tutorial notebooks is already advanced enough to perform analysis in it. All the packages are written and maintained by other physicists or scientists in general. As any other library, these packages are neither perfect (bug free) nor do they have all the features that you may want today. They are, however, built for simple contributions: if there are missing features or bugs, please report or directly contribute with code and become part of the ecosystem!\n",
+    "1) The ecosystem that is going to be showcased in these tutorial notebooks is already advanced enough to perform analysis in it. All the packages are written and maintained by other physicists or scientists in general. As any other library, these packages are neither perfect (bug free) nor do they have all the features that you may want today. They are, however, built for simple contributions: if there are missing features or bugs, please report or directly contribute with code and become part of the ecosystem!\n",
+    "\n",
+    "2) Several of the libraries of this \"HEP ecosystem\" are in fact NOT domain specific! Do feel free to use them :-) (and anything you may find interesting or useful, it \"goes without saying\").\n",
     "</div>"
    ]
   },
@@ -515,7 +517,8 @@
     "\n",
     "#### Scikit-HEP project\n",
     "- Website: https://scikit-hep.org/\n",
-    "- GitHub: https://github.com/scikit-hep/"
+    "- GitHub: https://github.com/scikit-hep/\n",
+    "- Gitter channel: https://gitter.im/Scikit-HEP/community"
    ]
   },
   {
